--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/tools"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/tools"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -19,6 +19,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".UploadNewTool" />
+        <activity android:name=".UpdateTools" />
+
+        <service
+            android:name=".UploadNewToolService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".UpdateToolService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".ViewTools"></activity>
     </application>
 
 </manifest>
